The patch method has been implemented along with the swagger file has been updated
